🩹 Fix nested list spacing issues

--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -100,6 +100,11 @@
     margin-bottom: var(--content-gap);
 }
 
+.post-content li ul,
+.post-content li :last-of-type {
+    margin-bottom: 0;
+}
+
 .post-content ol,
 .post-content ul {
     padding-inline-start: 20px;
